Ensure that home form fields align correctly (Resolves todo)

--- a/src/domain/home/form/homePreliminaryForm.module.scss
+++ b/src/domain/home/form/homePreliminaryForm.module.scss
@@ -11,8 +11,7 @@
 
   .inputWrapper {
     display: grid;
-    justify-content: start;
-    align-self: start;
+    align-items: baseline;
     @include respond-above(md) {
       grid-template-columns: 1fr 1fr;
       gap: 0 $baseMargin;
